apps/supercloud-backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '210'
  name: release-name
  labels:
    app.kubernetes.io/name: base
    helm.sh/chart: base-1.1.4
    app.kubernetes.io/instance: release-name
    app: release-name
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: base
    app.kubernetes.io/instance: release-name
