apps/supercloud-backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '210'
  name: release-name
  labels:
    app.kubernetes.io/name: base
    helm.sh/chart: base-1.1.4
    app.kubernetes.io/instance: release-name
    app: release-name
spec:
  rules:
    - host: base-openshift-gitops.containers.appdomain.cloud
      http:
        paths:
          - path:
            backend:
              serviceName: release-name
              servicePort: http
